// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with backup completed 1`] = `
<RNCSafeAreaView
  edges={
    Array [
      "bottom",
      "left",
      "right",
      "top",
    ]
  }
  style={
    Object {
      "flex": 1,
      "justifyContent": "space-between",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 56,
          "justifyContent": "space-between",
          "overflow": "hidden",
          "width": "100%",
        },
        Object {
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "height": "100%",
          "justifyContent": "center",
        }
      }
    >
      <Modal
        animationType="none"
        deviceHeight={1334}
        deviceWidth={null}
        hardwareAccelerated={false}
        hideModalContentWhileAnimating={false}
        onBackdropPress={[Function]}
        onModalHide={[Function]}
        onModalWillHide={[Function]}
        onModalWillShow={[Function]}
        onRequestClose={[Function]}
        panResponderThreshold={4}
        scrollHorizontal={false}
        scrollOffset={0}
        scrollOffsetMax={0}
        scrollTo={null}
        statusBarTranslucent={true}
        supportedOrientations={
          Array [
            "portrait",
            "landscape",
          ]
        }
        swipeThreshold={100}
        transparent={true}
        visible={false}
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          forwardedRef={[Function]}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "black",
              "bottom": 0,
              "height": 1334,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 750,
            }
          }
        />
        <View
          collapsable={false}
          deviceHeight={1334}
          deviceWidth={null}
          forwardedRef={[Function]}
          hideModalContentWhileAnimating={false}
          nativeID="animatedComponent"
          onBackdropPress={[Function]}
          onModalHide={[Function]}
          onModalWillHide={[Function]}
          onModalWillShow={[Function]}
          panResponderThreshold={4}
          pointerEvents="box-none"
          scrollHorizontal={false}
          scrollOffset={0}
          scrollOffsetMax={0}
          scrollTo={null}
          statusBarTranslucent={true}
          style={
            Object {
              "flex": 1,
              "justifyContent": "center",
              "margin": 37.5,
              "transform": Array [
                Object {
                  "translateY": 0,
                },
              ],
            }
          }
          supportedOrientations={
            Array [
              "portrait",
              "landscape",
            ]
          }
          swipeThreshold={100}
        >
          <RNCSafeAreaView
            edges={
              Array [
                "bottom",
                "left",
                "right",
                "top",
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#FFFFFF",
                    "padding": 16,
                  },
                  Object {
                    "borderRadius": 8,
                  },
                  Object {
                    "elevation": 12,
                    "shadowColor": "rgba(156, 164, 169, 0.4)",
                    "shadowOffset": Object {
                      "height": 2,
                      "width": 0,
                    },
                    "shadowOpacity": 1,
                    "shadowRadius": 12,
                  },
                  Array [
                    Object {
                      "backgroundColor": "#FFFFFF",
                      "maxHeight": "100%",
                      "padding": 24,
                    },
                    undefined,
                  ],
                ]
              }
            >
              <RCTScrollView
                contentContainerStyle={
                  Object {
                    "alignItems": "center",
                  }
                }
              >
                <View>
                  <Text
                    style={
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Jost-Medium",
                        "fontSize": 22,
                        "lineHeight": 28,
                        "marginBottom": 12,
                        "textAlign": "center",
                      }
                    }
                  >
                    cancelDialog.title
                  </Text>
                  <Text
                    style={
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Inter-Regular",
                        "fontSize": 16,
                        "lineHeight": 22,
                        "marginBottom": 24,
                        "textAlign": "center",
                      }
                    }
                  >
                    cancelDialog.body
                  </Text>
                </View>
              </RCTScrollView>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "flexWrap": "wrap",
                    "justifyContent": "space-around",
                    "maxWidth": "100%",
                  }
                }
              >
                <View
                  accessible={true}
                  focusable={true}
                  nativeBackgroundAndroid={
                    Object {
                      "attribute": "selectableItemBackgroundBorderless",
                      "rippleRadius": undefined,
                      "type": "ThemeAttrAndroid",
                    }
                  }
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#1AB775",
                          "fontFamily": "Inter-SemiBold",
                          "fontSize": 16,
                          "lineHeight": 22,
                        },
                        Object {
                          "color": "#9CA4A9",
                          "paddingTop": 16,
                        },
                      ]
                    }
                  >
                    cancelDialog.secondary
                  </Text>
                </View>
                <View
                  accessible={true}
                  focusable={true}
                  nativeBackgroundAndroid={
                    Object {
                      "attribute": "selectableItemBackgroundBorderless",
                      "rippleRadius": undefined,
                      "type": "ThemeAttrAndroid",
                    }
                  }
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#1AB775",
                          "fontFamily": "Inter-SemiBold",
                          "fontSize": 16,
                          "lineHeight": 22,
                        },
                        Object {
                          "paddingTop": 16,
                        },
                      ]
                    }
                  >
                    cancelDialog.action
                  </Text>
                </View>
              </View>
            </View>
          </RNCSafeAreaView>
        </View>
      </Modal>
      <View
        accessible={true}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackgroundBorderless",
            "rippleRadius": undefined,
            "type": "ThemeAttrAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="CancelButton"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#1AB775",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              },
              Array [
                Object {
                  "color": "#2E3338",
                },
                Object {
                  "color": "#9CA4A9",
                },
              ],
            ]
          }
        >
          cancel
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "height": "100%",
          "justifyContent": "center",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackgroundBorderless",
            "rippleRadius": undefined,
            "type": "ThemeAttrAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <Text
          style={
            Object {
              "color": "#1AB775",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          moreInfo
        </Text>
      </View>
    </View>
  </View>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "flexGrow": 1,
        "justifyContent": "space-between",
        "padding": 16,
        "paddingBottom": 16,
      }
    }
  >
    <View>
      <View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingHorizontal": 2,
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "column",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Jost-Medium",
                  "fontSize": 22,
                  "lineHeight": 28,
                  "marginBottom": 16,
                }
              }
            >
              writeDownKey
            </Text>
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 13,
                  "lineHeight": 16,
                }
              }
            >
              yourAccountKey
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "alignContent": "center",
              "backgroundColor": "#F1F0EB",
              "borderColor": "#2E3338",
              "borderRadius": 4,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginTop": 8,
              "padding": 16,
            }
          }
        />
      </View>
      <Text
        style={
          Object {
            "color": "#2E3338",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 22,
            "marginTop": 16,
          }
        }
      >
        backupKeySummary
      </Text>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;

exports[`renders correctly with backup not completed 1`] = `
<RNCSafeAreaView
  edges={
    Array [
      "bottom",
      "left",
      "right",
      "top",
    ]
  }
  style={
    Object {
      "flex": 1,
      "justifyContent": "space-between",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 56,
          "justifyContent": "space-between",
          "overflow": "hidden",
          "width": "100%",
        },
        Object {
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "height": "100%",
          "justifyContent": "center",
        }
      }
    >
      <Modal
        animationType="none"
        deviceHeight={1334}
        deviceWidth={null}
        hardwareAccelerated={false}
        hideModalContentWhileAnimating={false}
        onBackdropPress={[Function]}
        onModalHide={[Function]}
        onModalWillHide={[Function]}
        onModalWillShow={[Function]}
        onRequestClose={[Function]}
        panResponderThreshold={4}
        scrollHorizontal={false}
        scrollOffset={0}
        scrollOffsetMax={0}
        scrollTo={null}
        statusBarTranslucent={true}
        supportedOrientations={
          Array [
            "portrait",
            "landscape",
          ]
        }
        swipeThreshold={100}
        transparent={true}
        visible={false}
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          forwardedRef={[Function]}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "black",
              "bottom": 0,
              "height": 1334,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 750,
            }
          }
        />
        <View
          collapsable={false}
          deviceHeight={1334}
          deviceWidth={null}
          forwardedRef={[Function]}
          hideModalContentWhileAnimating={false}
          nativeID="animatedComponent"
          onBackdropPress={[Function]}
          onModalHide={[Function]}
          onModalWillHide={[Function]}
          onModalWillShow={[Function]}
          panResponderThreshold={4}
          pointerEvents="box-none"
          scrollHorizontal={false}
          scrollOffset={0}
          scrollOffsetMax={0}
          scrollTo={null}
          statusBarTranslucent={true}
          style={
            Object {
              "flex": 1,
              "justifyContent": "center",
              "margin": 37.5,
              "transform": Array [
                Object {
                  "translateY": 0,
                },
              ],
            }
          }
          supportedOrientations={
            Array [
              "portrait",
              "landscape",
            ]
          }
          swipeThreshold={100}
        >
          <RNCSafeAreaView
            edges={
              Array [
                "bottom",
                "left",
                "right",
                "top",
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#FFFFFF",
                    "padding": 16,
                  },
                  Object {
                    "borderRadius": 8,
                  },
                  Object {
                    "elevation": 12,
                    "shadowColor": "rgba(156, 164, 169, 0.4)",
                    "shadowOffset": Object {
                      "height": 2,
                      "width": 0,
                    },
                    "shadowOpacity": 1,
                    "shadowRadius": 12,
                  },
                  Array [
                    Object {
                      "backgroundColor": "#FFFFFF",
                      "maxHeight": "100%",
                      "padding": 24,
                    },
                    undefined,
                  ],
                ]
              }
            >
              <RCTScrollView
                contentContainerStyle={
                  Object {
                    "alignItems": "center",
                  }
                }
              >
                <View>
                  <Text
                    style={
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Jost-Medium",
                        "fontSize": 22,
                        "lineHeight": 28,
                        "marginBottom": 12,
                        "textAlign": "center",
                      }
                    }
                  >
                    cancelDialog.title
                  </Text>
                  <Text
                    style={
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Inter-Regular",
                        "fontSize": 16,
                        "lineHeight": 22,
                        "marginBottom": 24,
                        "textAlign": "center",
                      }
                    }
                  >
                    cancelDialog.body
                  </Text>
                </View>
              </RCTScrollView>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "flexWrap": "wrap",
                    "justifyContent": "space-around",
                    "maxWidth": "100%",
                  }
                }
              >
                <View
                  accessible={true}
                  focusable={true}
                  nativeBackgroundAndroid={
                    Object {
                      "attribute": "selectableItemBackgroundBorderless",
                      "rippleRadius": undefined,
                      "type": "ThemeAttrAndroid",
                    }
                  }
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#1AB775",
                          "fontFamily": "Inter-SemiBold",
                          "fontSize": 16,
                          "lineHeight": 22,
                        },
                        Object {
                          "color": "#9CA4A9",
                          "paddingTop": 16,
                        },
                      ]
                    }
                  >
                    cancelDialog.secondary
                  </Text>
                </View>
                <View
                  accessible={true}
                  focusable={true}
                  nativeBackgroundAndroid={
                    Object {
                      "attribute": "selectableItemBackgroundBorderless",
                      "rippleRadius": undefined,
                      "type": "ThemeAttrAndroid",
                    }
                  }
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#1AB775",
                          "fontFamily": "Inter-SemiBold",
                          "fontSize": 16,
                          "lineHeight": 22,
                        },
                        Object {
                          "paddingTop": 16,
                        },
                      ]
                    }
                  >
                    cancelDialog.action
                  </Text>
                </View>
              </View>
            </View>
          </RNCSafeAreaView>
        </View>
      </Modal>
      <View
        accessible={true}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackgroundBorderless",
            "rippleRadius": undefined,
            "type": "ThemeAttrAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="CancelButton"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#1AB775",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              },
              Array [
                Object {
                  "color": "#2E3338",
                },
                Object {
                  "color": "#9CA4A9",
                },
              ],
            ]
          }
        >
          cancel
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "height": "100%",
          "justifyContent": "center",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackgroundBorderless",
            "rippleRadius": undefined,
            "type": "ThemeAttrAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <Text
          style={
            Object {
              "color": "#1AB775",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          moreInfo
        </Text>
      </View>
    </View>
  </View>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "flexGrow": 1,
        "justifyContent": "space-between",
        "padding": 16,
        "paddingBottom": 16,
      }
    }
  >
    <View>
      <View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingHorizontal": 2,
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "column",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Jost-Medium",
                  "fontSize": 22,
                  "lineHeight": 28,
                  "marginBottom": 16,
                }
              }
            >
              writeDownKey
            </Text>
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 13,
                  "lineHeight": 16,
                }
              }
            >
              yourAccountKey
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "alignContent": "center",
              "backgroundColor": "#F1F0EB",
              "borderColor": "#2E3338",
              "borderRadius": 4,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginTop": 8,
              "padding": 16,
            }
          }
        />
      </View>
      <Text
        style={
          Object {
            "color": "#2E3338",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 22,
            "marginTop": 16,
          }
        }
      >
        backupKeySummary
      </Text>
    </View>
  </RCTScrollView>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginVertical": 16,
        "paddingHorizontal": 16,
      }
    }
  >
    <AndroidSwitch
      accessibilityRole="switch"
      enabled={true}
      on={false}
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      testID="backupKeySavedSwitch"
      thumbTintColor="#EDEEEF"
      trackColorForFalse="#B4B9BD"
      trackColorForTrue="#1AB775"
      trackTintColor="#B4B9BD"
    />
    <Text
      onPress={[Function]}
      style={
        Object {
          "color": "#2E3338",
          "flex": 1,
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "lineHeight": 22,
          "paddingLeft": 8,
        }
      }
    >
      savedConfirmation
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "flexDirection": "column",
        },
        Object {
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "overflow": "hidden",
          },
          Object {
            "borderRadius": 100,
          },
        ]
      }
    >
      <View
        accessibilityState={
          Object {
            "disabled": true,
          }
        }
        accessible={true}
        focusable={false}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackground",
            "rippleRadius": undefined,
            "type": "ThemeAttrAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#F1F0EB",
            "flexDirection": "row",
            "flexGrow": 1,
            "height": 48,
            "justifyContent": "center",
            "opacity": undefined,
            "paddingHorizontal": 24,
            "paddingVertical": 5,
          }
        }
        testID="backupKeyContinue"
      >
        <Text
          maxFontSizeMultiplier={1}
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 16,
              "lineHeight": 22,
              "marginLeft": 0,
              "marginRight": 0,
            }
          }
        >
          continue
        </Text>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`still renders when mnemonic doesnt show up 1`] = `
<RNCSafeAreaView
  edges={
    Array [
      "bottom",
      "left",
      "right",
      "top",
    ]
  }
  style={
    Object {
      "flex": 1,
      "justifyContent": "space-between",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 56,
          "justifyContent": "space-between",
          "overflow": "hidden",
          "width": "100%",
        },
        Object {
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "height": "100%",
          "justifyContent": "center",
        }
      }
    >
      <Modal
        animationType="none"
        deviceHeight={1334}
        deviceWidth={null}
        hardwareAccelerated={false}
        hideModalContentWhileAnimating={false}
        onBackdropPress={[Function]}
        onModalHide={[Function]}
        onModalWillHide={[Function]}
        onModalWillShow={[Function]}
        onRequestClose={[Function]}
        panResponderThreshold={4}
        scrollHorizontal={false}
        scrollOffset={0}
        scrollOffsetMax={0}
        scrollTo={null}
        statusBarTranslucent={true}
        supportedOrientations={
          Array [
            "portrait",
            "landscape",
          ]
        }
        swipeThreshold={100}
        transparent={true}
        visible={false}
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          forwardedRef={[Function]}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "black",
              "bottom": 0,
              "height": 1334,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 750,
            }
          }
        />
        <View
          collapsable={false}
          deviceHeight={1334}
          deviceWidth={null}
          forwardedRef={[Function]}
          hideModalContentWhileAnimating={false}
          nativeID="animatedComponent"
          onBackdropPress={[Function]}
          onModalHide={[Function]}
          onModalWillHide={[Function]}
          onModalWillShow={[Function]}
          panResponderThreshold={4}
          pointerEvents="box-none"
          scrollHorizontal={false}
          scrollOffset={0}
          scrollOffsetMax={0}
          scrollTo={null}
          statusBarTranslucent={true}
          style={
            Object {
              "flex": 1,
              "justifyContent": "center",
              "margin": 37.5,
              "transform": Array [
                Object {
                  "translateY": 0,
                },
              ],
            }
          }
          supportedOrientations={
            Array [
              "portrait",
              "landscape",
            ]
          }
          swipeThreshold={100}
        >
          <RNCSafeAreaView
            edges={
              Array [
                "bottom",
                "left",
                "right",
                "top",
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#FFFFFF",
                    "padding": 16,
                  },
                  Object {
                    "borderRadius": 8,
                  },
                  Object {
                    "elevation": 12,
                    "shadowColor": "rgba(156, 164, 169, 0.4)",
                    "shadowOffset": Object {
                      "height": 2,
                      "width": 0,
                    },
                    "shadowOpacity": 1,
                    "shadowRadius": 12,
                  },
                  Array [
                    Object {
                      "backgroundColor": "#FFFFFF",
                      "maxHeight": "100%",
                      "padding": 24,
                    },
                    undefined,
                  ],
                ]
              }
            >
              <RCTScrollView
                contentContainerStyle={
                  Object {
                    "alignItems": "center",
                  }
                }
              >
                <View>
                  <Text
                    style={
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Jost-Medium",
                        "fontSize": 22,
                        "lineHeight": 28,
                        "marginBottom": 12,
                        "textAlign": "center",
                      }
                    }
                  >
                    cancelDialog.title
                  </Text>
                  <Text
                    style={
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Inter-Regular",
                        "fontSize": 16,
                        "lineHeight": 22,
                        "marginBottom": 24,
                        "textAlign": "center",
                      }
                    }
                  >
                    cancelDialog.body
                  </Text>
                </View>
              </RCTScrollView>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "flexWrap": "wrap",
                    "justifyContent": "space-around",
                    "maxWidth": "100%",
                  }
                }
              >
                <View
                  accessible={true}
                  focusable={true}
                  nativeBackgroundAndroid={
                    Object {
                      "attribute": "selectableItemBackgroundBorderless",
                      "rippleRadius": undefined,
                      "type": "ThemeAttrAndroid",
                    }
                  }
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#1AB775",
                          "fontFamily": "Inter-SemiBold",
                          "fontSize": 16,
                          "lineHeight": 22,
                        },
                        Object {
                          "color": "#9CA4A9",
                          "paddingTop": 16,
                        },
                      ]
                    }
                  >
                    cancelDialog.secondary
                  </Text>
                </View>
                <View
                  accessible={true}
                  focusable={true}
                  nativeBackgroundAndroid={
                    Object {
                      "attribute": "selectableItemBackgroundBorderless",
                      "rippleRadius": undefined,
                      "type": "ThemeAttrAndroid",
                    }
                  }
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#1AB775",
                          "fontFamily": "Inter-SemiBold",
                          "fontSize": 16,
                          "lineHeight": 22,
                        },
                        Object {
                          "paddingTop": 16,
                        },
                      ]
                    }
                  >
                    cancelDialog.action
                  </Text>
                </View>
              </View>
            </View>
          </RNCSafeAreaView>
        </View>
      </Modal>
      <View
        accessible={true}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackgroundBorderless",
            "rippleRadius": undefined,
            "type": "ThemeAttrAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="CancelButton"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#1AB775",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              },
              Array [
                Object {
                  "color": "#2E3338",
                },
                Object {
                  "color": "#9CA4A9",
                },
              ],
            ]
          }
        >
          cancel
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "height": "100%",
          "justifyContent": "center",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackgroundBorderless",
            "rippleRadius": undefined,
            "type": "ThemeAttrAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <Text
          style={
            Object {
              "color": "#1AB775",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          moreInfo
        </Text>
      </View>
    </View>
  </View>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "flexGrow": 1,
        "justifyContent": "space-between",
        "padding": 16,
        "paddingBottom": 16,
      }
    }
  >
    <View>
      <View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingHorizontal": 2,
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "column",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Jost-Medium",
                  "fontSize": 22,
                  "lineHeight": 28,
                  "marginBottom": 16,
                }
              }
            >
              writeDownKey
            </Text>
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 13,
                  "lineHeight": 16,
                }
              }
            >
              yourAccountKey
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "alignContent": "center",
              "backgroundColor": "#F1F0EB",
              "borderColor": "#2E3338",
              "borderRadius": 4,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginTop": 8,
              "padding": 16,
            }
          }
        />
      </View>
      <Text
        style={
          Object {
            "color": "#2E3338",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 22,
            "marginTop": 16,
          }
        }
      >
        backupKeySummary
      </Text>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;
